Tests/Errors/SimpleRecovery/.build/start.pr
{
  "name": "Start",
  "description": null,
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "read \u0027data.txt\u0027, on error 404, write out \u0022missing\u0022",
      "lineNumber": 5,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "file",
          "action": "read",
          "parameters": [
            {
              "name": "Path",
              "value": "data.txt",
              "type": "path"
            }
          ],
          "defaults": [
            {
              "name": "resolvevariables",
              "value": false,
              "type": "bool"
            }
          ],
          "modifiers": [
            {
              "module": "error",
              "action": "handle",
              "parameters": [
                {
                  "name": "StatusCode",
                  "value": 404,
                  "type": "int"
                },
                {
                  "name": "Actions",
                  "value": [
                    {
                      "module": "output",
                      "action": "write",
                      "parameters": [
                        {
                          "name": "Data",
                          "value": "missing",
                          "type": "string"
                        }
                      ],
                      "defaults": null,
                      "modifiers": []
                    }
                  ],
                  "type": "list\u003Caction\u003E"
                }
              ],
              "defaults": [
                {
                  "name": "ignoreerror",
                  "value": false,
                  "type": "bool"
                }
              ],
              "modifiers": []
            }
          ]
        }
      ],
      "intent": null,
      "guidance": "file.read data.txt produces file content; on error 404, run a recovery chain that writes \u0027missing\u0027 to output. The on-error clause is a modifier-style wrapper, so we emit file.read plus a separate error.handle action with Actions containing output.write.",
      "level": "high",
      "confidence": 92,
      "formal": null,
      "source": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Errors/SimpleRecovery/Start.goal",
  "prPath": "/Errors/SimpleRecovery/.build/start.pr",
  "hash": "893ce2cffae7eba108189abf534c4c1ea1fae9abe64f32ead904ccc8aabaef6c",
  "builderVersion": "0.2.2",
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}